# erp-data-model

./: README.md  setup.cfg
.github/workflows/: publish-to-pypi.yml
src/erp_data_model/: base.py  catalog.py
