[metadata]
name = erp-data-model
version = 0.0.1
author = Sebastien Pochic
author_email = spochic@gmail.com
description = ERP data model: pydantic data model for ERP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spochic/erp-data-model
project_urls =
    Bug Tracker = https://github.com/spochic/erp-data-model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Database :: Front-Ends

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
